# sideway

./: .cirrus.yml  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Justfile  README.md  codecov.yml
.github/workflows/: test.yml
docs/: shared-posting.md
examples/: cmtime.rs  ibv_devinfo.rs  rc_pingpong.rs  rc_pingpong_split.rs  show_gids.rs  test_cq.rs  test_ibv_wr.rs  test_mr.rs  test_mr_and_cq.rs  test_post_send.rs  test_qp.rs  ud_pingpong_split.rs
src/: lib.rs
src/cm/: communication_manager.rs  connection_manager.rs
src/ibverbs/: address.rs  completion.rs  device.rs  device_context.rs  memory_region.rs  mod.rs  protection_domain.rs  queue_pair.rs
src/mlx5/: context.rs  dc.rs  mod.rs
src/rdmacm/: communication_manager.rs  mod.rs
src/verbs/: address.rs  address_handle.rs  comp_channel.rs  completion.rs  completion_queue.rs  device.rs  device_context.rs  memory_region.rs  mod.rs  protection_domain.rs  queue_pair.rs  rdma_context.rs
tests/: compiletest.rs  test_atomic.rs  test_cq.rs  test_ibv_wr.rs  test_mr_and_cq.rs  test_post_send.rs  test_qp.rs
tests/post_send_guard/: one_guard_has_only_one_handle.rs  one_guard_has_only_one_handle.stderr  one_guard_has_only_one_wr.rs  one_guard_has_only_one_wr.stderr  one_qp_has_only_one_guard.rs  one_qp_has_only_one_guard.stderr
