[package]
name = "sideway"
version = "0.1.0"
description = "A better wrapper for using RDMA programming APIs in Rust flavor"
license= "MPL-2.0"
authors = [
    "Luke Yue <lukedyue@gmail.com>",
    "FujiZ <i@fujiz.me>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdma-mummy-sys = "0.1"
tabled = "0.16"
libc = "0.2"
os_socketaddr = "0.2"
