[package]
name = "sideway"
version = "0.1.1"
description = "A better wrapper for using RDMA programming APIs in Rust flavor"
license= "MPL-2.0"
repository = "https://github.com/RDMA-Rust/sideway"
readme = "README.md"
keywords = ["RDMA", "verbs", "cm", "libibverbs", "librdmacm"]
authors = [
    "Luke Yue <lukedyue@gmail.com>",
    "FujiZ <i@fujiz.me>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdma-mummy-sys = "0.2"
tabled = "0.16"
libc = "0.2"
os_socketaddr = "0.2"
bitmask-enum = "2.2"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
trybuild = "1.0"
rstest = "0.23"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
postcard = { version = "1.0", features = ["alloc"] }
quanta = "0.12"
byte-unit = "5.1"
ouroboros = "0.18"
proptest = "1.5"
